tests/snapshots/generator_tests__generate_two_owner_columns_model.snap
---
source: tests/generator_tests.rs
expression: dsl.trim()
---
model
  schema 1.1

type user

type nobody

type owner_grants_owner
  relations
    define grant_admin: [user]
    define grant_editor: [user]
    define grant_viewer: [user]
    define owner_user: [user]
    define role_admin: owner_user or grant_admin
    define role_editor: role_admin or grant_editor
    define role_viewer: role_editor or grant_viewer

type records
  relations
    define delegate_id: [owner_grants_owner]
    define no_access: [nobody]
    define owner_id: [owner_grants_owner]
    define can_delete: no_access
    define can_insert: no_access
    define can_select: role_viewer from owner_id or role_admin from delegate_id
    define can_select_for_update: can_update
    define can_update: no_access
    define can_update_without_reading: can_update
