tests/snapshots/generator_tests__generate_two_owner_columns_tuples.snap
---
source: tests/generator_tests.rs
expression: script
---
-- Owner identities that are rows of users
SELECT 'owner_grants_owner:' || CASE WHEN "id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "id"::text ELSE '~' || encode(convert_to("id"::text, 'UTF8'), 'hex') END AS object, 'owner_user' AS relation, 'user:' || CASE WHEN "id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "id"::text ELSE '~' || encode(convert_to("id"::text, 'UTF8'), 'hex') END AS subject
FROM "users"
WHERE "id" IS NOT NULL;

-- Explicit grants over owner_grants_owner identities (role_id: 2=viewer, 3=editor, 4=admin)
SELECT
  'owner_grants_owner:' || CASE WHEN og."granted_owner_id"::text ~ '^[A-Za-z0-9._@-]+$' THEN og."granted_owner_id"::text ELSE '~' || encode(convert_to(og."granted_owner_id"::text, 'UTF8'), 'hex') END AS object,
  CASE og."role_id"
    WHEN 2 THEN 'grant_viewer'
    WHEN 3 THEN 'grant_editor'
    WHEN 4 THEN 'grant_admin'
  END AS relation,
  'user:' || CASE WHEN og."grantee_owner_id"::text ~ '^[A-Za-z0-9._@-]+$' THEN og."grantee_owner_id"::text ELSE '~' || encode(convert_to(og."grantee_owner_id"::text, 'UTF8'), 'hex') END AS subject
FROM "owner_grants" og
WHERE og."role_id" IN (2, 3, 4);

-- records to owner_grants_owner bridge for tuple-to-userset
SELECT 'records:' || CASE WHEN "id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "id"::text ELSE '~' || encode(convert_to("id"::text, 'UTF8'), 'hex') END AS object, 'owner_id' AS relation, 'owner_grants_owner:' || CASE WHEN "owner_id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "owner_id"::text ELSE '~' || encode(convert_to("owner_id"::text, 'UTF8'), 'hex') END AS subject
FROM "records"
WHERE "id" IS NOT NULL
AND "owner_id" IS NOT NULL;

-- records to owner_grants_owner bridge for tuple-to-userset
SELECT 'records:' || CASE WHEN "id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "id"::text ELSE '~' || encode(convert_to("id"::text, 'UTF8'), 'hex') END AS object, 'delegate_id' AS relation, 'owner_grants_owner:' || CASE WHEN "delegate_id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "delegate_id"::text ELSE '~' || encode(convert_to("delegate_id"::text, 'UTF8'), 'hex') END AS subject
FROM "records"
WHERE "id" IS NOT NULL
AND "delegate_id" IS NOT NULL;
