tests/snapshots/generator_tests__generate_two_role_functions_model.snap
---
source: tests/generator_tests.rs
expression: dsl.trim()
---
model
  schema 1.1

type user

type ledgers
  relations
    define no_access: [user]
    define owner_id: [owner_grants_owner_23f04e74]
    define can_delete: no_access
    define can_insert: no_access
    define can_select: role_clerk from owner_id
    define can_select_for_update: can_update
    define can_update: no_access
    define can_update_without_reading: can_update

type owner_grants_owner_23f04e74
  relations
    define grant_auditor: [user]
    define grant_clerk: [user]
    define owner_user: [user]
    define role_auditor: owner_user or grant_auditor
    define role_clerk: role_auditor or grant_clerk

type owner_grants_owner_6e98b9a0
  relations
    define grant_admin: [user]
    define grant_editor: [user]
    define grant_viewer: [user]
    define owner_user: [user]
    define role_admin: owner_user or grant_admin
    define role_editor: role_admin or grant_editor
    define role_viewer: role_editor or grant_viewer

type projects
  relations
    define no_access: [user]
    define owner_id: [owner_grants_owner_6e98b9a0]
    define can_delete: no_access
    define can_insert: no_access
    define can_select: role_viewer from owner_id
    define can_select_for_update: can_update
    define can_update: no_access
    define can_update_without_reading: can_update
