tests/snapshots/generator_tests__generate_two_role_functions_tuples.snap
---
source: tests/generator_tests.rs
expression: "tuple_generator::format_tuples(&tuples)"
---
SET TIME ZONE 'UTC';
SET DateStyle = 'ISO, MDY';
SET bytea_output = 'hex';

-- ledgers to owner_grants_owner_23f04e74 bridge for tuple-to-userset
SELECT 'ledgers:' || CASE WHEN "id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "id"::text ELSE '~' || encode(convert_to("id"::text, 'UTF8'), 'hex') END AS object, 'owner_id' AS relation, 'owner_grants_owner_23f04e74:' || CASE WHEN "owner_id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "owner_id"::text ELSE '~' || encode(convert_to("owner_id"::text, 'UTF8'), 'hex') END AS subject
FROM "ledgers"
WHERE "id" IS NOT NULL
AND "owner_id" IS NOT NULL;

-- Owner identities that are rows of users
SELECT 'owner_grants_owner_23f04e74:' || CASE WHEN "id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "id"::text ELSE '~' || encode(convert_to("id"::text, 'UTF8'), 'hex') END AS object, 'owner_user' AS relation, 'user:' || CASE WHEN "id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "id"::text ELSE '~' || encode(convert_to("id"::text, 'UTF8'), 'hex') END AS subject
FROM "users"
WHERE "id" IS NOT NULL;

-- Explicit grants over owner_grants_owner_23f04e74 identities (role_id: 5=clerk, 9=auditor)
SELECT
  'owner_grants_owner_23f04e74:' || CASE WHEN og."granted_owner_id"::text ~ '^[A-Za-z0-9._@-]+$' THEN og."granted_owner_id"::text ELSE '~' || encode(convert_to(og."granted_owner_id"::text, 'UTF8'), 'hex') END AS object,
  CASE og."role_id"
    WHEN 5 THEN 'grant_clerk'
    WHEN 9 THEN 'grant_auditor'
  END AS relation,
  'user:' || CASE WHEN og."grantee_owner_id"::text ~ '^[A-Za-z0-9._@-]+$' THEN og."grantee_owner_id"::text ELSE '~' || encode(convert_to(og."grantee_owner_id"::text, 'UTF8'), 'hex') END AS subject
FROM "owner_grants" og
WHERE og."role_id" IN (5, 9);

-- Owner identities that are rows of users
SELECT 'owner_grants_owner_6e98b9a0:' || CASE WHEN "id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "id"::text ELSE '~' || encode(convert_to("id"::text, 'UTF8'), 'hex') END AS object, 'owner_user' AS relation, 'user:' || CASE WHEN "id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "id"::text ELSE '~' || encode(convert_to("id"::text, 'UTF8'), 'hex') END AS subject
FROM "users"
WHERE "id" IS NOT NULL;

-- Explicit grants over owner_grants_owner_6e98b9a0 identities (role_id: 2=viewer, 3=editor, 4=admin)
SELECT
  'owner_grants_owner_6e98b9a0:' || CASE WHEN og."granted_owner_id"::text ~ '^[A-Za-z0-9._@-]+$' THEN og."granted_owner_id"::text ELSE '~' || encode(convert_to(og."granted_owner_id"::text, 'UTF8'), 'hex') END AS object,
  CASE og."role_id"
    WHEN 2 THEN 'grant_viewer'
    WHEN 3 THEN 'grant_editor'
    WHEN 4 THEN 'grant_admin'
  END AS relation,
  'user:' || CASE WHEN og."grantee_owner_id"::text ~ '^[A-Za-z0-9._@-]+$' THEN og."grantee_owner_id"::text ELSE '~' || encode(convert_to(og."grantee_owner_id"::text, 'UTF8'), 'hex') END AS subject
FROM "owner_grants" og
WHERE og."role_id" IN (2, 3, 4);

-- projects to owner_grants_owner_6e98b9a0 bridge for tuple-to-userset
SELECT 'projects:' || CASE WHEN "id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "id"::text ELSE '~' || encode(convert_to("id"::text, 'UTF8'), 'hex') END AS object, 'owner_id' AS relation, 'owner_grants_owner_6e98b9a0:' || CASE WHEN "owner_id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "owner_id"::text ELSE '~' || encode(convert_to("owner_id"::text, 'UTF8'), 'hex') END AS subject
FROM "projects"
WHERE "id" IS NOT NULL
AND "owner_id" IS NOT NULL;
