tests/snapshots/generator_tests__generate_uncorrelated_membership_model.snap
---
source: tests/generator_tests.rs
expression: model.model().trim()
---
model
  schema 1.1

type user

type docs
  relations
    define no_access: [nobody]
    define staff_holder: [staff_holder]
    define can_delete: no_access
    define can_insert: no_access
    define can_select: member from staff_holder
    define can_select_for_update: can_update
    define can_update: no_access
    define can_update_without_reading: can_update

type memos
  relations
    define no_access: [nobody]
    define reviewers_holder: [reviewers_holder]
    define can_delete: no_access
    define can_insert: no_access
    define can_select: member from reviewers_holder
    define can_select_for_update: can_update
    define can_update: no_access
    define can_update_without_reading: can_update

type nobody

type reviewers_holder
  relations
    define member: [user with when_memos_memos_reviewers_0f827662]

type staff_holder
  relations
    define member: [user]

condition when_memos_memos_reviewers_0f827662(request_time: timestamp, vetted_at: timestamp) {
  vetted_at > request_time
}
