tests/snapshots/generator_tests__pg_has_role_tuples.snap
---
source: tests/generator_tests.rs
expression: "tuple_generator::format_tuples(tuples)"
---
SET TIME ZONE 'UTC';
SET DateStyle = 'ISO, MDY';
SET bytea_output = 'hex';

-- Every public.docs row is judged by the scope scope_member_editor_89c73e0a
SELECT 'docs:' || CASE WHEN "id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "id"::text ELSE '~' || encode(convert_to("id"::text, 'UTF8'), 'hex') END AS object, 'scope_member_editor_89c73e0a' AS relation, 'pg_role_scope:scope_member_editor_89c73e0a' AS subject
FROM "public"."docs"
WHERE "id" IS NOT NULL;

-- Scope scope_member_editor_89c73e0a admits PostgreSQL role 'editor', which the policy decides rather than any row
SELECT 'pg_role_scope:scope_member_editor_89c73e0a' AS object, 'roles' AS relation, 'pg_role:editor' AS subject;
