tests/snapshots/generator_tests__role_accessor_model.snap
---
source: tests/generator_tests.rs
expression: model.model().trim()
---
model
  schema 1.1

type user

type docs
  relations
    define no_access: [user]
    define scope_docs_select_14425117: [pg_role]
    define can_delete: no_access
    define can_insert: no_access
    define can_select: scope_docs_select_14425117
    define can_select_for_update: can_update
    define can_update: no_access
    define can_update_without_reading: can_update

type pg_role
