tests/snapshots/generator_tests__role_accessor_tuples.snap
---
source: tests/generator_tests.rs
expression: "tuple_generator::format_tuples(&tuples)"
---
-- Policy scope: docs rows require PostgreSQL role 'authenticated' via scope_docs_select_14425117
SELECT 'docs:' || CASE WHEN "id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "id"::text ELSE '~' || encode(convert_to("id"::text, 'UTF8'), 'hex') END AS object, 'scope_docs_select_14425117' AS relation, 'pg_role:authenticated' AS subject
FROM "docs"
WHERE "id" IS NOT NULL;
